--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=backend
 
 # Server port (default is 8080)
 server.port=8080
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
