--- a/frontend/Matchday-Manager/package.json
+++ b/frontend/Matchday-Manager/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.7.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.0.1",
+    "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
